# Runarr

./: .gitignore  LICENSE  ideas.md  pyproject.toml  readme.md  runarr  series-json-example.md
comic_organizer/: .env.template  collect-metadata.md  comic-info-example.md  comic_info.py  main.py  requirements.txt  series_info.py
