[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comic-organizer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tool to organize comic book archives."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-magic",
    "rarfile",
    "imagehash",
    "guessit",
    "Pillow",
    "python-dotenv",
    "colorama",
    "rich",
]

[project.scripts]
runarr = "comic_organizer.main:main"

[tool.setuptools]
packages = ["comic_organizer"]
